resolved chatup media section size on mobile and removed wip links

--- a/src/features/ChatUp/ChatUp.css
+++ b/src/features/ChatUp/ChatUp.css
@@ -300,6 +300,9 @@
     background-size: auto;
     background-repeat: repeat;
   }
+  .SidePanelMediaContainer {
+    background-size: cover;
+  }
   .chat-introduction-container {
     padding: .4rem;
     flex: 1;
